# agri-rag

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_example.py
src/LightRAG/: README.md
src/LightRAG/lightrag/: lightrag.py  prompt.py
src/LightRAG/lightrag/api/: lightrag_server.py
src/RAGAnything/: README.md
src/RAGAnything/raganything/: config.py  modalprocessors.py  processor.py  query.py  raganything.py  utils.py
src/api/: agrirag_server.py  config.py  gunicorn_config.py  lightrag_server.py  run_with_gunicorn.py  utils_api.py
src/api/routers/: document_routes.py  graph_routes.py  ollama_api.py  query_routes.py
src/utils/: destroy_postgres.py
